--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+select {
+  height: 37.42px;
+}
+.label-style {
+  @apply capitalize font-bold text-sm mb-1 text-slate-500 flex;
+}
+.heading1 {
+  @apply font-sans capitalize font-bold text-lg mb-2 text-slate-600 flex;
+}
+.heading2 {
+  @apply font-sans capitalize font-bold border-b pb-1 border-teal-700 text-teal-700 flex mb-4;
+}
+.heading3 {
+  @apply font-sans capitalize font-bold text-sm border-b pb-1 border-slate-600 mb-4 mt-3 text-slate-600 flex;
+}
+.input-style {
+  @apply block mb-1 min-h-[auto] border border-slate-600 w-full bg-white px-3 py-[0.32rem] leading-[1.6] outline-none focus:border-teal-700;
+}
+.asterisk {
+  @apply text-red-600 text-lg leading-4 ml-1;
+}
+.button-style {
+  @apply inline-flex gap-1 items-center  bg-green-500 text-xs font-bold min-h-8 px-3 py-1 text-white rounded hover:bg-green-600 hover:transition-all hover:duration-300;
+}
+.button-edit {
+  @apply inline-flex gap-1 items-center bg-purple-500 text-xs font-bold min-h-8 px-3 py-1 text-white rounded hover:bg-purple-800 hover:transition-all hover:duration-300;
+}
+.button-delete {
+  @apply inline-flex gap-1 items-center bg-red-400 text-xs font-bold min-h-8 px-3 py-1 text-white rounded hover:bg-red-500 hover:transition-all hover:duration-300;
+}
+.button-print {
+  @apply inline-flex gap-1 items-center bg-slate-600 text-xs font-bold min-h-8 px-3 py-1 text-white rounded hover:bg-slate-700 hover:transition-all hover:duration-300;
+}
+.button-default {
+  @apply inline-flex gap-1 items-center  border-2 border-gray-200 bg-gray-50 text-xs font-bold min-h-8 px-3 py-1 text-black rounded hover:bg-gray-300 hover:transition-all hover:duration-300;
+}
+.box-style {
+  @apply bg-white shadow-md p-5 border border-gray-200 mb-8;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+main > div {
+  @apply py-8 px-8 bg-white shadow-2xl w-[1000px] max-w-full mx-auto z-10;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+nav,
+footer {
+  @apply z-10;
 }
