--- a/app/globals.css
+++ b/app/globals.css
@@ -55,3 +55,12 @@ footer {
 .nav-link-icon-style {
   @apply text-yellow-200 text-2xl;
 }
+.page-header-group {
+  @apply my-2 flex justify-between items-center sm:flex-row flex-col;
+}
+.personal-detail-box {
+  @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4  gap-3;
+}
+.view-measure-row {
+  @apply flex justify-between items-center border-b border-gray-300 flex-wrap;
+}
